--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ TODO:
   
   APIs to add:
     https://github.com/15Dkatz/official_joke_api
-    https://api.chucknorris.io/
+    https://api.chucknorris.io/ -- done
     https://developers.giphy.com/docs/
     https://github.com/r-spacex/SpaceX-API
     https://random.dog/woof.json -- done
