--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ TODO:
     https://developers.giphy.com/docs/ 
     https://newton.now.sh/
 
-  Ideos to implement:
+  Ideas to implement:
     Make eddie leave the voice channel after 3-5 mins of inactivity
     search the office gifs
     search parks and rec gifs
